Add ability to call javascript code on current webpage
